objects/APTS_Lookup_Junction__c.object
<CustomObject>
    <description>Junction Object that defaults the Queue on Collaboration Request</description>
    <fields>
        <fullName>APTS_Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines whether queue needs to be default in collaboration request</description>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Queue__c</fullName>
        <description>This field contains Salesforce record-id of queue that needs to be shown on collaboration request</description>
        <label>Queue</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Service_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Location</label>
        <referenceTo>Apttus_Config2__ServiceLocation__c</referenceTo>
        <relationshipLabel>Lookup Junctions</relationshipLabel>
        <relationshipName>Lookup_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Lookup Junction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APTS_Is_Default__c</columns>
        <columns>APTS_Queue__c</columns>
        <columns>APTS_Service_Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LJ-{000000}</displayFormat>
        <label>Lookup Junction Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lookup Junctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>